--- a/requirements.txt
+++ b/requirements.txt
@@ -2,15 +2,21 @@ Flask==0.10.1
 Flask-Admin==1.0.8
 Flask-Login==0.2.11
 Flask-Mail==0.9.0
+Flask-Migrate==1.3.0
 Flask-Principal==0.4.0
 Flask-SQLAlchemy==2.0
+Flask-Script==2.0.5
 Flask-Security==1.7.3
 Flask-WTF==0.10.2
 Jinja2==2.7.3
+Mako==1.0.1
 MarkupSafe==0.23
+MySQL-python==1.2.5
+Pillow==2.7.0
 SQLAlchemy==0.9.7
 WTForms==2.0.1
 Werkzeug==0.9.6
+alembic==0.7.4
 blinker==1.3
 itsdangerous==0.24
 passlib==1.6.2
