--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ Flask-Script==2.0.5
 Flask-Security==1.7.3
 Flask-SQLAlchemy==2.0
 Flask-WTF==0.10.2
+imgurpython==1.1.5
 itsdangerous==0.24
 Jinja2==2.7.3
 Mako==1.0.1
