--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ alembic==0.7.4
 blinker==1.3
 Flask==0.10.1
 Flask-Admin==1.0.8
+Flask-Cache==0.13.1
 Flask-Login==0.2.11
 Flask-Mail==0.9.0
 Flask-Migrate==1.3.0
@@ -20,6 +21,7 @@ MySQL-python==1.2.5
 oauthlib==0.7.2
 passlib==1.6.2
 Pillow==2.7.0
+redis==2.10.3
 requests==2.5.1
 requests-oauthlib==0.4.2
 SQLAlchemy==0.9.7
