--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 alembic==0.7.4
 blinker==1.3
+bugsnag==2.3.0
 Flask==0.10.1
 Flask-Admin==1.0.8
 Flask-Cache==0.13.1
+Flask-DebugToolbar==0.9.2
 Flask-Login==0.2.11
 Flask-Mail==0.9.0
 Flask-Migrate==1.3.0
@@ -11,6 +13,7 @@ Flask-Principal==0.4.0
 Flask-Script==2.0.5
 Flask-Security==1.7.3
 Flask-SQLAlchemy==2.0
+Flask-SQLAlchemy-Cache==0.1.2
 Flask-WTF==0.10.2
 imgurpython==1.1.5
 itsdangerous==0.24
@@ -26,5 +29,6 @@ requests==2.5.1
 requests-oauthlib==0.4.2
 SQLAlchemy==0.9.7
 translitcodec==0.3
+WebOb==1.4
 Werkzeug==0.9.6
 WTForms==2.0.1
