--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 alembic==0.7.4
+bleach==1.4.1
 blinker==1.3
 bugsnag==2.3.0
 Flask==0.10.1
@@ -15,6 +16,7 @@ Flask-Security==1.7.3
 Flask-SQLAlchemy==2.0
 Flask-SQLAlchemy-Cache==0.1.2
 Flask-WTF==0.10.2
+html5lib==0.999
 imgurpython==1.1.5
 itsdangerous==0.24
 Jinja2==2.7.3
@@ -27,6 +29,7 @@ Pillow==2.7.0
 redis==2.10.3
 requests==2.5.1
 requests-oauthlib==0.4.2
+six==1.9.0
 SQLAlchemy==0.9.7
 translitcodec==0.3
 WebOb==1.4
