--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^1.0.1",
     "grunt-contrib-sass": "^0.8.1",
-    "grunt-contrib-watch": "~0.6.1"
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-contrib-uglify": "~0.2.4"
   }
 }
