--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "blender-today",
+  "version": "1.0.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/armadillica/blender-today.git"
@@ -7,11 +8,11 @@
   "author": "Blender Today",
   "license": "GPL",
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-autoprefixer": "^1.0.1",
-    "grunt-contrib-sass": "^0.8.1",
+    "grunt": "~0.4.5",
+    "grunt-autoprefixer": "~1.0.1",
+    "grunt-contrib-sass": "~0.9.2",
     "grunt-contrib-watch": "~0.6.1",
-    "grunt-contrib-uglify": "~0.2.4",
+    "grunt-contrib-uglify": "~0.9.1",
     "grunt-contrib-jade": "~0.14.0"
   }
 }
