--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   "author": "Blender Today",
   "license": "GPL",
   "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-autoprefixer": "~1.0.1",
-    "grunt-contrib-sass": "~0.9.2",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-contrib-uglify": "~0.9.1",
-    "grunt-contrib-jade": "~0.14.0"
+    "gulp": "~3.9.0",
+    "gulp-sass": "~2.0.4",
+    "gulp-sourcemaps": "~1.5.2",
+    "gulp-autoprefixer": "~3.0.1",
+    "gulp-jade": "~1.1.0",
+    "gulp-uglify": "~1.4.0",
+    "gulp-livereload": "~3.8.0"
   }
 }
