--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,10 @@ config.py
 
 dillo/application/templates/**/*
 dillo/application/static/css/main.css
-dillo/application/static/js/theuniverse.min.js
+dillo/application/static/js/tutti.min.js
 node_modules
 .sass-cache/
 *.css.map
+*.js.map
 
 *.rdb
