--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "devDependencies": {
     "gulp": "~3.9.0",
     "gulp-sass": "~2.0.4",
-    "gulp-sourcemaps": "~1.5.2",
-    "gulp-autoprefixer": "~3.0.1",
+    "gulp-autoprefixer": "~2.3.1",
     "gulp-jade": "~1.1.0",
+    "gulp-sourcemaps": "~1.5.2",
     "gulp-uglify": "~1.4.0",
-    "gulp-livereload": "~3.8.0"
+    "gulp-plumber": "~1.0.1",
+    "gulp-livereload": "~3.8.0",
+    "gulp-concat": "~2.6.0"
   }
 }
