Local backend for image storage
By setting the new USE_UPLOADS_LOCAL_STORAGE setting to True, we can
now save the images associated to a post in a local folder, so that
they can be served when Imgur is not available or not enabled at all.

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ config.py
 dillo/application/templates/**/*
 dillo/application/static/css/main.css
 dillo/application/static/js/tutti.min.js
+dillo/application/static/storage/
 node_modules
 .sass-cache/
 *.css.map
