--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Flask-DebugToolbar==0.9.2
 Flask-Login==0.2.11
 Flask-Mail==0.9.0
 Flask-Migrate==1.3.0
+Flask-OAuth==0.12
 Flask-OAuthlib==0.9.0
 Flask-Principal==0.4.0
 Flask-Script==2.0.5
@@ -16,7 +17,9 @@ Flask-Security==1.7.3
 Flask-SQLAlchemy==2.0
 Flask-SQLAlchemy-Cache==0.1.2
 Flask-WTF==0.10.2
+flup==1.0.2
 html5lib==0.999
+httplib2==0.9
 imgurpython==1.1.5
 itsdangerous==0.24
 Jinja2==2.7.3
@@ -24,9 +27,11 @@ Mako==1.0.1
 MarkupSafe==0.23
 micawber==0.3.1
 MySQL-python==1.2.5
+oauth2==1.5.211
 oauthlib==0.7.2
 passlib==1.6.2
 Pillow==2.7.0
+python-twitter==2.2
 redis==2.10.3
 requests==2.5.3
 requests-oauthlib==0.4.2
