Enable a2enmod rewrite in Docker image

--- a/docker/pro/Dockerfile
+++ b/docker/pro/Dockerfile
@@ -21,6 +21,8 @@ nodejs \
 nodejs-legacy \
 npm
 
+RUN a2enmod rewrite
+
 RUN mkdir -p /data/git \
 && mkdir -p /data/storage \
 && mkdir -p /data/config
