Updates to Docker images

--- a/docker/dev/Dockerfile
+++ b/docker/dev/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu
+FROM ubuntu:14.04
 MAINTAINER Francesco Siddi <francesco@dillo.space>
 
 # Update aptitude with new repo
@@ -25,7 +25,9 @@ RUN pip install virtualenv \
 ENV PIP_PACKAGES_VERSION = 1
 ADD requirements.txt /requirements.txt
 
-RUN . /data/venv/bin/activate && pip install -r /requirements.txt
+RUN . /data/venv/bin/activate \
+&& pip install --upgrade pip \
+&& pip install -r /requirements.txt
 
 VOLUME /data/git/dillo
 
