Dillo Font: Rename to font-icons copy from theme on gulp
- In order to make things clearer, rename dillo-font to font-icons
- Font files were already in /static, they are now copied via gulp from /src/themes/dillo/font/ into /static
(also serves as example when you want to have your own fonts in your theme, get copied over)
- config.json (to be used in fontello.com) is stored in the theme, not much sense to copy it over /static

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 config.py
 
 dillo/application/templates/**/*
+dillo/application/themes/dillo/static/font/*
 dillo/application/themes/dillo/static/css/*
 dillo/application/themes/dillo/static/js/*
 dillo/application/themes/dillo/templates/*
