--- a/dillo/src/themes/dillo/font/config.json
+++ b/dillo/src/themes/dillo/font/config.json
@@ -1,39 +1,11 @@
 {
-  "name": "dillo-font",
+  "name": "font-icons",
   "css_prefix_text": "di-",
   "css_use_suffix": false,
   "hinting": true,
   "units_per_em": 1000,
   "ascent": 850,
   "glyphs": [
-    {
-      "uid": "053a214a098a9453877363eeb45f004e",
-      "css": "log-in",
-      "code": 59399,
-      "src": "custom_icons",
-      "selected": true,
-      "svg": {
-        "path": "M500 62.5C313.4 62.5 154.2 179.3 91.3 343.8H158.9C177.3 303.7 202.8 266.9 234.8 234.8 305.7 164 399.8 125 500 125 600.1 125 694.3 164 765.2 234.8 836 305.7 875 399.8 875 500 875 600.2 836 694.3 765.2 765.2 694.3 836 600.1 875 500 875 399.8 875 305.7 836 234.8 765.2 202.8 733.1 177.3 696.3 158.9 656.3H91.3C154.2 820.7 313.4 937.5 500 937.5 741.6 937.5 937.5 741.6 937.5 500 937.5 258.4 741.6 62.5 500 62.5ZM404 632.6L448.2 676.8 625 500 448.2 323.2 404 367.4 505.4 468.8 62.5 468.8 62.5 531.3 505.4 531.3Z",
-        "width": 1000
-      },
-      "search": [
-        "log-in"
-      ]
-    },
-    {
-      "uid": "f603c4a31f5a386102a33b5bb215451c",
-      "css": "log-out",
-      "code": 59400,
-      "src": "custom_icons",
-      "selected": true,
-      "svg": {
-        "path": "M716.5 632.6L760.7 676.8 937.5 500 760.7 323.2 716.5 367.4 817.9 468.8 375 468.8 375 531.3 817.9 531.3ZM764.6 765.2C693.8 836 599.6 875 499.5 875 399.3 875 305.1 836 234.3 765.2 163.5 694.3 125 600.2 125 500 125 399.8 163.5 305.7 234.3 234.8 305.1 164 399.3 125 499.5 125 599.6 125 693.8 164 764.6 234.8 769.6 239.8 774.3 244.8 779 250H858.5C779.5 136.7 648.1 62.5 499.5 62.5 257.9 62.5 62.5 258.4 62.5 500 62.5 741.6 257.9 937.5 499.5 937.5 648.1 937.5 779.5 863.3 858.5 750H779C774.3 755.2 769.6 760.2 764.6 765.2Z",
-        "width": 1000
-      },
-      "search": [
-        "log-out"
-      ]
-    },
     {
       "uid": "9b4165d8bf44809bd494733a85e9f1ab",
       "css": "blender",
@@ -144,48 +116,6 @@
       },
       "search": [
         "blender-cloud-logo"
-      ]
-    },
-    {
-      "uid": "f37fb714b7c145f3eb738d39c560f49d",
-      "css": "notifications-active",
-      "code": 59444,
-      "src": "custom_icons",
-      "selected": true,
-      "svg": {
-        "path": "M274.2 149.2L214.6 89.6C115 165.4 49.2 283.3 42.9 416.7H126.3C132.5 306.3 189.2 209.6 274.2 149.2ZM832.1 416.7H915.4C909.2 283.3 843.3 165.4 743.3 89.6L683.7 149.2C769.2 209.6 825.8 306.2 832.1 416.7ZM750 437.5C750 309.6 661.2 202.5 541.7 174.2V145.8C541.7 111.2 513.7 83.3 479.2 83.3S416.7 111.2 416.7 145.8V174.2C297.1 202.5 208.3 309.6 208.3 437.5V666.7L125 750V791.7H833.3V750L750 666.7V437.5ZM479.2 916.7C485 916.7 490.4 916.3 495.8 915 522.9 909.6 545.4 890.8 555.8 865.8 560 855.8 562.5 845 562.5 833.3H395.8C395.8 879.2 433.3 916.7 479.2 916.7Z",
-        "width": 1000
-      },
-      "search": [
-        "notifications-active"
-      ]
-    },
-    {
-      "uid": "ca63a83e2608f22c048cac93801aea38",
-      "css": "notifications-off",
-      "code": 59445,
-      "src": "custom_icons",
-      "selected": true,
-      "svg": {
-        "path": "M479.2 916.7C525 916.7 562.5 879.2 562.5 833.3H395.8C395.8 879.2 433.3 916.7 479.2 916.7ZM750 437.5C750 309.6 661.3 202.5 541.7 174.2V145.8C541.7 111.2 513.8 83.3 479.2 83.3S416.7 111.2 416.7 145.8V174.2C395.4 179.2 375.4 187.5 356.2 197.5L750 590.8V437.5ZM738.8 791.7L822.1 875 875 822.1 177.9 125 125 177.9 246.7 299.6C222.5 340 208.3 387.1 208.3 437.5V666.7L125 750V791.7H738.8Z",
-        "width": 1000
-      },
-      "search": [
-        "notifications-off"
-      ]
-    },
-    {
-      "uid": "d2884cf82f0df019e89b923a796424cd",
-      "css": "notifications-none",
-      "code": 59446,
-      "src": "custom_icons",
-      "selected": true,
-      "svg": {
-        "path": "M479.2 916.7C525 916.7 562.5 879.2 562.5 833.3H395.8C395.8 879.2 433.3 916.7 479.2 916.7ZM750 666.7V437.5C750 309.6 661.3 202.5 541.7 174.2V145.8C541.7 111.2 513.8 83.3 479.2 83.3S416.7 111.2 416.7 145.8V174.2C297.1 202.5 208.3 309.6 208.3 437.5V666.7L125 750V791.7H833.3V750L750 666.7ZM666.7 708.3H291.7V437.5C291.7 333.8 375.4 250 479.2 250S666.7 333.8 666.7 437.5V708.3Z",
-        "width": 1000
-      },
-      "search": [
-        "notifications-none"
       ]
     },
     {
@@ -429,12 +359,6 @@
       "src": "typicons"
     },
     {
-      "uid": "fc94b92194752796654c96c7b7dccebb",
-      "css": "cog",
-      "code": 59417,
-      "src": "iconic"
-    },
-    {
       "uid": "f47srtt9pew19q6kg9jniwtzsb8q1rhy",
       "css": "warning",
       "code": 59403,
@@ -543,12 +467,6 @@
       "src": "fontawesome"
     },
     {
-      "uid": "e15f0d620a7897e2035c18c80142f6d9",
-      "css": "link-ext",
-      "code": 59419,
-      "src": "fontawesome"
-    },
-    {
       "uid": "4f3b31017c63ba04dc4f78ce7a8f02b1",
       "css": "upload",
       "code": 59416,
@@ -643,6 +561,112 @@
       "css": "comments",
       "code": 59392,
       "src": "fontawesome"
+    },
+    {
+      "uid": "cd21cbfb28ad4d903cede582157f65dc",
+      "css": "notifications-none",
+      "code": 59481,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "671f29fa10dda08074a4c6a341bb4f39",
+      "css": "notifications-active",
+      "code": 59482,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "563683020e0bf9f22f3f055a69b5c57a",
+      "css": "notifications-off",
+      "code": 59483,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "8b9e6a8dd8f67f7c003ed8e7e5ee0857",
+      "css": "log-out",
+      "code": 59444,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "e35de5ea31cd56970498e33efbcb8e36",
+      "css": "link-ext",
+      "code": 59399,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "7336247ba3db350dec8d6c0a47cef966",
+      "css": "cog",
+      "code": 59400,
+      "src": "mfglabs"
+    },
+    {
+      "uid": "053a214a098a9453877363eeb45f004e",
+      "css": "log-in",
+      "code": 59399,
+      "src": "custom_icons",
+      "selected": false,
+      "svg": {
+        "path": "M500 62.5C313.4 62.5 154.2 179.3 91.3 343.8H158.9C177.3 303.7 202.8 266.9 234.8 234.8 305.7 164 399.8 125 500 125 600.1 125 694.3 164 765.2 234.8 836 305.7 875 399.8 875 500 875 600.2 836 694.3 765.2 765.2 694.3 836 600.1 875 500 875 399.8 875 305.7 836 234.8 765.2 202.8 733.1 177.3 696.3 158.9 656.3H91.3C154.2 820.7 313.4 937.5 500 937.5 741.6 937.5 937.5 741.6 937.5 500 937.5 258.4 741.6 62.5 500 62.5ZM404 632.6L448.2 676.8 625 500 448.2 323.2 404 367.4 505.4 468.8 62.5 468.8 62.5 531.3 505.4 531.3Z",
+        "width": 1000
+      },
+      "search": [
+        "log-in"
+      ]
+    },
+    {
+      "uid": "f603c4a31f5a386102a33b5bb215451c",
+      "css": "log-out-1",
+      "code": 59400,
+      "src": "custom_icons",
+      "selected": false,
+      "svg": {
+        "path": "M716.5 632.6L760.7 676.8 937.5 500 760.7 323.2 716.5 367.4 817.9 468.8 375 468.8 375 531.3 817.9 531.3ZM764.6 765.2C693.8 836 599.6 875 499.5 875 399.3 875 305.1 836 234.3 765.2 163.5 694.3 125 600.2 125 500 125 399.8 163.5 305.7 234.3 234.8 305.1 164 399.3 125 499.5 125 599.6 125 693.8 164 764.6 234.8 769.6 239.8 774.3 244.8 779 250H858.5C779.5 136.7 648.1 62.5 499.5 62.5 257.9 62.5 62.5 258.4 62.5 500 62.5 741.6 257.9 937.5 499.5 937.5 648.1 937.5 779.5 863.3 858.5 750H779C774.3 755.2 769.6 760.2 764.6 765.2Z",
+        "width": 1000
+      },
+      "search": [
+        "log-out"
+      ]
+    },
+    {
+      "uid": "f37fb714b7c145f3eb738d39c560f49d",
+      "css": "notifications-active",
+      "code": 59444,
+      "src": "custom_icons",
+      "selected": false,
+      "svg": {
+        "path": "M274.2 149.2L214.6 89.6C115 165.4 49.2 283.3 42.9 416.7H126.3C132.5 306.3 189.2 209.6 274.2 149.2ZM832.1 416.7H915.4C909.2 283.3 843.3 165.4 743.3 89.6L683.7 149.2C769.2 209.6 825.8 306.2 832.1 416.7ZM750 437.5C750 309.6 661.2 202.5 541.7 174.2V145.8C541.7 111.2 513.7 83.3 479.2 83.3S416.7 111.2 416.7 145.8V174.2C297.1 202.5 208.3 309.6 208.3 437.5V666.7L125 750V791.7H833.3V750L750 666.7V437.5ZM479.2 916.7C485 916.7 490.4 916.3 495.8 915 522.9 909.6 545.4 890.8 555.8 865.8 560 855.8 562.5 845 562.5 833.3H395.8C395.8 879.2 433.3 916.7 479.2 916.7Z",
+        "width": 1000
+      },
+      "search": [
+        "notifications-active"
+      ]
+    },
+    {
+      "uid": "ca63a83e2608f22c048cac93801aea38",
+      "css": "notifications-off",
+      "code": 59445,
+      "src": "custom_icons",
+      "selected": false,
+      "svg": {
+        "path": "M479.2 916.7C525 916.7 562.5 879.2 562.5 833.3H395.8C395.8 879.2 433.3 916.7 479.2 916.7ZM750 437.5C750 309.6 661.3 202.5 541.7 174.2V145.8C541.7 111.2 513.8 83.3 479.2 83.3S416.7 111.2 416.7 145.8V174.2C395.4 179.2 375.4 187.5 356.2 197.5L750 590.8V437.5ZM738.8 791.7L822.1 875 875 822.1 177.9 125 125 177.9 246.7 299.6C222.5 340 208.3 387.1 208.3 437.5V666.7L125 750V791.7H738.8Z",
+        "width": 1000
+      },
+      "search": [
+        "notifications-off"
+      ]
+    },
+    {
+      "uid": "d2884cf82f0df019e89b923a796424cd",
+      "css": "notifications-none",
+      "code": 59446,
+      "src": "custom_icons",
+      "selected": false,
+      "svg": {
+        "path": "M479.2 916.7C525 916.7 562.5 879.2 562.5 833.3H395.8C395.8 879.2 433.3 916.7 479.2 916.7ZM750 666.7V437.5C750 309.6 661.3 202.5 541.7 174.2V145.8C541.7 111.2 513.8 83.3 479.2 83.3S416.7 111.2 416.7 145.8V174.2C297.1 202.5 208.3 309.6 208.3 437.5V666.7L125 750V791.7H833.3V750L750 666.7ZM666.7 708.3H291.7V437.5C291.7 333.8 375.4 250 479.2 250S666.7 333.8 666.7 437.5V708.3Z",
+        "width": 1000
+      },
+      "search": [
+        "notifications-none"
+      ]
     },
     {
       "uid": "991710797f37a1d64135f7531a428a89",
