--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ Flask-Security==1.7.3
 Flask-SQLAlchemy==2.0
 Flask-SQLAlchemy-Cache==0.1.2
 Flask-WTF==0.10.2
+flup==1.0.2
 html5lib==0.999
 imgurpython==1.1.5
 itsdangerous==0.24
