--- a/dillo/config.py.sample
+++ b/dillo/config.py.sample
@@ -10,7 +10,7 @@ class Config(object):
     MAIL_USE_SSL = True
     MAIL_USERNAME = ''
     MAIL_PASSWORD = ''
-    DEFAULT_MAIL_SENDER = ''
+    MAIL_DEFAULT_SENDER = ''
 
     # Flask-Security setup
     # Check out sensible configuration values at https://pythonhosted.org/Flask-Security/
