--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 alembic==0.7.4
 bleach==1.4.1
-blinker==1.3
+blinker==1.4
 bugsnag==2.3.0
+cffi==1.7.0
+cryptography==1.4
+enum34==1.1.6
 Flask==0.10.1
 Flask-Admin==1.0.8
 Flask-Cache==0.13.1
@@ -9,32 +12,41 @@ Flask-DebugToolbar==0.9.2
 Flask-Login==0.2.11
 Flask-Mail==0.9.0
 Flask-Migrate==1.3.0
+Flask-OAuth==0.12
 Flask-OAuthlib==0.9.2
 Flask-Principal==0.4.0
 Flask-Script==2.0.5
 Flask-Security==1.7.3
 Flask-SQLAlchemy==2.0
-Flask-SQLAlchemy-Cache==0.1.2
 Flask-WTF==0.10.2
 flup==1.0.2
 html5lib==0.999
+httplib2==0.9
+idna==2.1
 imgurpython==1.1.5
+ipaddress==1.0.16
 itsdangerous==0.24
-Jinja2==2.7.3
-Mako==1.0.1
+Jinja2==2.8
+Mako==1.0.4
 MarkupSafe==0.23
 micawber==0.3.1
 MySQL-python==1.2.5
+ndg-httpsclient==0.4.1
+oauth2==1.5.211
 oauthlib==1.0.3
 passlib==1.6.2
 Pillow==2.7.0
+pyasn1==0.1.9
+pycparser==2.14
+pyOpenSSL==16.0.0
+python-twitter==2.2
 redis==2.10.3
 requests==2.9.1
 requests-oauthlib==0.6.1
-six==1.9.0
-SQLAlchemy==0.9.7
-translitcodec==0.3
+six==1.10.0
+SQLAlchemy==1.0.12
+translitcodec==0.4.0
 tweepy==3.3.0
 WebOb==1.4
-Werkzeug==0.9.6
+Werkzeug==0.11.5
 WTForms==2.0.1
