Introducing Gulp support
Update packages as well

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"gulp-if": "^2.0.2",
 		"gulp-livereload": "~3.8.1",
 		"gulp-plumber": "~1.1.0",
-		"gulp-sass": "~3.1.1",
+		"gulp-rename": "~1.2.2",
+		"gulp-sass": "~3.1.0",
 		"gulp-sourcemaps": "~2.4.1",
 		"gulp-uglify": "~2.1.0",
 		"minimist": "^1.2.0"
