Localization: Include all .pugs for extraction

--- a/translations.cfg
+++ b/translations.cfg
@@ -10,5 +10,5 @@
 [python: dillo/**.py]
 
 # Extraction from the template files
-[jinja2: src/templates/dillo/**.pug]
+[jinja2: src/templates/**/**.pug]
 extensions=jinja2.ext.autoescape,jinja2.ext.with_
