Docker: always redirect to non www-version

--- a/docker/4_run/000-default.conf
+++ b/docker/4_run/000-default.conf
@@ -20,6 +20,12 @@
 		<Files runserver.wsgi>
 			Require all granted
 		</Files>
+
 	</Directory>
+
+	# Redirect to non-www version
+	RewriteEngine On
+	RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
+	RewriteRule ^(.*)$ http://%1/$1 [R=301,L]
 
 </VirtualHost>
