--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
 		"gulp": "~3.9.1",
 		"gulp-autoprefixer": "~2.3.1",
 		"gulp-cached": "~1.1.1",
+		"gulp-chmod": "~1.3.0",
 		"gulp-concat": "~2.6.1",
+		"gulp-git": "~2.4.2",
 		"gulp-if": "^2.0.2",
 		"gulp-livereload": "~3.8.1",
 		"gulp-plumber": "~1.1.0",
