--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"gulp-pug": "~3.2.0",
 		"gulp-rename": "~1.2.2",
 		"gulp-sass": "~3.1.0",
+		"gulp-sourcemaps": "~1.6.0",
 		"gulp-uglify": "~2.1.0",
 		"minimist": "^1.2.0"
 	}
