--- a/package.json
+++ b/package.json
@@ -7,20 +7,6 @@
 		"url": "git://github.com/armadillica/dillo.git"
 	},
 	"devDependencies": {
-		"gulp": "~3.9.1",
-		"gulp-autoprefixer": "~2.3.1",
-		"gulp-cached": "~1.1.1",
-		"gulp-chmod": "~1.3.0",
-		"gulp-concat": "~2.6.1",
-		"gulp-git": "~2.4.2",
-		"gulp-if": "^2.0.2",
-		"gulp-livereload": "~3.8.1",
-		"gulp-plumber": "~1.1.0",
-		"gulp-pug": "~3.2.0",
-		"gulp-rename": "~1.2.2",
-		"gulp-sass": "~3.1.0",
-		"gulp-sourcemaps": "~1.6.0",
-		"gulp-uglify": "~2.1.0",
-		"minimist": "^1.2.0"
+		"gulp": "^4.0.0"
 	}
 }
