--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -100,7 +100,7 @@ services:
       environment:
           WEBROOT: /data/letsencrypt
           LISTEN: '[::]:80'
-          VIRTUAL_HOST: http://blender.community/.well-known/*,http://www.blender.community/.well-known/*,http://static-origin.blender.community/.well-known/
+          VIRTUAL_HOST: http://blender.community/.well-known/*,http://www.blender.community/.well-known/*,http://static-origin.blender.community/.well-known/*
           VIRTUAL_HOST_WEIGHT: 30
       volumes:
           - /data/letsencrypt:/data/letsencrypt
