--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
-name = "animato"
+name = "dillo"
 version = "0.1.0"
-description = "Social network for the world of animation"
-authors = ["Francesco Siddi <francesco.siddi@gmail.com>"]
+description = "The core of community"
+authors = ["Francesco Siddi <francesco.siddi@gmail.com>", "Pablo Vazquez <venomgfx@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.6"
