Storage: Add support for S3
Introducing support for:
- S3-based storage (with CloudFront CDN)
- Uppy as file uploader, to perform direct uploads to S3
- updated coconut API calls

Depending on the value of DEFAULT_FILE_STORAGE (local or S3) we
perform different actions when uploading files or when receiving
coconut webhook calls.

Currently post_create.pug features both Dropzone and Uppy Dashboard
to ease the style porting.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,8 @@ mistune = "^0.8.4"
 bleach = "^3.1"
 user-agents = "^2.1"
 django-model-utils = "^4.0.0"
+django-storages = "^1.10.1"
+boto3 = "^1.15.11"
 
 [tool.poetry.dev-dependencies]
 black = {version = "*", allow-prereleases = true}
