--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ django-storages = "^1.10.1"
 boto3 = "^1.15.11"
 markupsafe = "^1.1.1"
 shortcodes = "2.5"
+webpreview = "^1.6.0"
 
 [tool.poetry.dev-dependencies]
 black = {version = "*", allow-prereleases = true}
