Deps: Add youtube-dl

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ markupsafe = "^1.1.1"
 shortcodes = "2.5"
 webpreview = "^1.6.0"
 django-recaptcha = "^2.0.6"
+youtube_dl = "^2021.12.17"
 
 [tool.poetry.dev-dependencies]
 black = {version = "*", allow-prereleases = true}
