Introducing: User directory
A new /directory endpoint is available, which queries a number of new
API endpoints providing user distribution on the Globe, as well as a
filtered and sorted user list.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ shortcodes = "2.5"
 webpreview = "^1.6.0"
 django-recaptcha = "^2.0.6"
 youtube_dl = "^2021.12.17"
+django-countries = "^7.3.2"
 
 [tool.poetry.dev-dependencies]
 black = {version = "*", allow-prereleases = true}
