Moderation: Add link validation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ webpreview = "^1.6.0"
 django-recaptcha = "^2.0.6"
 youtube_dl = "^2021.12.17"
 django-countries = "^7.3.2"
+urlextract = "^1.6.0"
 
 [tool.poetry.dev-dependencies]
 black = {version = "*", allow-prereleases = true}
